Fix: nextprev links breaking width if name too long

--- a/src/layout/BasicPage.scss
+++ b/src/layout/BasicPage.scss
@@ -96,11 +96,14 @@
 
     .prevNextLinks {
       display: flex;
+      flex-wrap: wrap;
       filter: grayscale(1);
       justify-content: space-between;
       a {
         margin-top: 2em;
         padding: 0.75em;
+        max-width: 45vw;
+        text-overflow: ellipsis;
       }
     }
   }
